Windows 10: Fix mismatched theme colors for PWA frame caption buttons

This CL is a quick fix for the "green buttons" bug where PWA windows
use the main browser theme colours for frame caption buttons on
Windows 10.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=362481&signed_aid=wZlcGI_yPhzQvEb3LIIImA==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=362482&signed_aid=oxJ3bwmmjcCErDhvgZue-w==&inline=1

This is a temporary work around for M71 while a more robust fix is
worked on for PWA windows and browser themes:
https://chromium-review.googlesource.com/c/chromium/src/+/1272896

Bug: 891560
Change-Id: Ic5fe4ddc1b8f60011d3b687a78ae2aad5fe7e185
Reviewed-on: https://chromium-review.googlesource.com/c/1275466
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598865}